--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "i18next": "^23.11.5",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.2",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
